carga de plantilla

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+
 <!-- Mirrored from flicksbootstrap.com/demo/boost-admin/v1.3/boost-admin/index-2.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 20 Sep 2016 01:49:34 GMT -->
 <head>
         <meta charset="utf-8">
@@ -10,17 +10,17 @@
         <title>Boost admin</title>
 
         <!-- Bootstrap -->
-        <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-        <link href="css/waves.min.css" type="text/css" rel="stylesheet">
-        <link rel="stylesheet" href="css/nanoscroller.css">
-        <link href="css/morris-0.4.3.min.css" rel="stylesheet">
-        <link href="css/menu-light.css" type="text/css" rel="stylesheet">
-        <link href="css/style.css" type="text/css" rel="stylesheet">
-        <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
-        <link href="css/themify-icons.css" rel="stylesheet">
-        <link href="css/color.css" rel="stylesheet">
-        <link href="css/app.min.1.css" rel="stylesheet">
-        <link href="css/fullcalendar.min.css" rel="stylesheet">
+        <link href="/static/app/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <link href="/static/app/css/waves.min.css" type="text/css" rel="stylesheet">
+        <link rel="stylesheet" href="/static/app/css/nanoscroller.css">
+        <link href="/static/app/css/morris-0.4.3.min.css" rel="stylesheet">
+        <link href="/static/app/css/menu-light.css" type="text/css" rel="stylesheet">
+        <link href="/static/app/css/style.css" type="text/css" rel="stylesheet">
+        <link href="/static/app/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+        <link href="/static/app/css/themify-icons.css" rel="stylesheet">
+        <link href="/static/app/css/color.css" rel="stylesheet">
+        <link href="/static/app/css/app.min.1.css" rel="stylesheet">
+        <link href="/static/app/css/fullcalendar.min.css" rel="stylesheet">
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -65,21 +65,7 @@
                                 <li class="clearfix">
                                     <a href="#">
                                         <span class="pull-left">
-                                            <img src="images/avtar-1.jpg" alt="" class="img-circle" width="30">
-                                        </span>
-                                        <span class="block">
-                                            John Doe
-                                        </span>
-                                        <span class="media-body">
-                                            Lorem ipsum dolor sit amet
-                                            <em>28 minutes ago</em>
-                                        </span> 
-                                    </a>
-                                </li>
-                                <li class="clearfix">
-                                    <a href="#">
-                                        <span class="pull-left">
-                                            <img src="images/avtar-2.jpg" alt="" class="img-circle" width="30">
+                                            <img src="/static/app/images/avtar-1.jpg" alt="" class="img-circle" width="30">
                                         </span>
                                         <span class="block">
                                             John Doe
@@ -93,7 +79,21 @@
                                 <li class="clearfix">
                                     <a href="#">
                                         <span class="pull-left">
-                                            <img src="images/avtar-3.jpg" alt="" class="img-circle" width="30">
+                                            <img src="/static/app/images/avtar-2.jpg" alt="" class="img-circle" width="30">
+                                        </span>
+                                        <span class="block">
+                                            John Doe
+                                        </span>
+                                        <span class="media-body">
+                                            Lorem ipsum dolor sit amet
+                                            <em>28 minutes ago</em>
+                                        </span>
+                                    </a>
+                                </li>
+                                <li class="clearfix">
+                                    <a href="#">
+                                        <span class="pull-left">
+                                            <img src="/static/app/images/avtar-3.jpg" alt="" class="img-circle" width="30">
                                         </span>
                                         <span class="block">
                                             John Doe
@@ -178,50 +178,50 @@
                                 </li>
                                 <li class="clearfix">
                                     <span class="block">
-                                        <img src="images/c1.jpg" alt="" onclick="templateoption('default', this)"/>
+                                        <img src="/static/app/images/c1.jpg" alt="" onclick="templateoption('default', this)"/>
                                     </span>
 
                                     <span class="block">
-                                        <img src="images/c2.jpg" alt="" onclick="templateoption('green', this)"/>
+                                        <img src="/static/app/images/c2.jpg" alt="" onclick="templateoption('green', this)"/>
                                     </span>
 
                                     <span class="block">
-                                        <img src="images/c3.jpg" alt="" onclick="templateoption('gold', this)"/>
-                                    </span>
-
-
-                                    <span class="block">
-                                        <img src="images/c4.jpg" alt="" onclick="templateoption('red', this)"/>
+                                        <img src="/static/app/images/c3.jpg" alt="" onclick="templateoption('gold', this)"/>
                                     </span>
 
 
                                     <span class="block">
-                                        <img src="images/c5.jpg" alt="" onclick="templateoption('black', this)"/>
+                                        <img src="/static/app/images/c4.jpg" alt="" onclick="templateoption('red', this)"/>
                                     </span>
 
 
                                     <span class="block">
-                                        <img src="images/c6.jpg" alt="" onclick="templateoption('dark', this)"/>
+                                        <img src="/static/app/images/c5.jpg" alt="" onclick="templateoption('black', this)"/>
                                     </span>
 
 
                                     <span class="block">
-                                        <img src="images/c7.jpg" alt="" onclick="templateoption('green dark', this)"/>
+                                        <img src="/static/app/images/c6.jpg" alt="" onclick="templateoption('dark', this)"/>
                                     </span>
 
 
                                     <span class="block">
-                                        <img src="images/c8.jpg" alt="" onclick="templateoption('gold dark', this)"/>
+                                        <img src="/static/app/images/c7.jpg" alt="" onclick="templateoption('green dark', this)"/>
                                     </span>
 
 
                                     <span class="block">
-                                        <img src="images/c9.jpg" alt="" onclick="templateoption('red dark', this)"/>
+                                        <img src="/static/app/images/c8.jpg" alt="" onclick="templateoption('gold dark', this)"/>
                                     </span>
 
 
                                     <span class="block">
-                                        <img src="images/c10.jpg" alt="" onclick="templateoption('black dark', this)"/>
+                                        <img src="/static/app/images/c9.jpg" alt="" onclick="templateoption('red dark', this)"/>
+                                    </span>
+
+
+                                    <span class="block">
+                                        <img src="/static/app/images/c10.jpg" alt="" onclick="templateoption('black dark', this)"/>
                                     </span>
                                 </li>
                             </ul>
@@ -240,7 +240,7 @@
                             <li class="nav-header">
                                 <div class="dropdown side-profile text-left">
                                     <span style="display: block;">
-                                        <img alt="image" class="img-circle" src="images/avtar-1.jpg" width="40">
+                                        <img alt="image" class="img-circle" src="/static/app/images/avtar-1.jpg" width="40">
                                     </span>
                                     <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                                         <span class="clear" style="display: block;"> <span class="block m-t-xs"> <strong class="font-bold">John Doe  <b class="caret"></b></strong>
@@ -268,7 +268,7 @@
                         </li>
                          <li class="p1-bg">
                             <a href="widgets.html"><i class="fa fa-cog"></i> <span class="nav-label">Widgets </span><span class="label label-rouded pull-right p3-bg note-icon">New 40+</span></a>
-                           
+
                         </li>
                             <li>
                                 <a href="mailbox.html"><i class="fa fa-envelope"></i> <span class="nav-label">Mailbox </span><span class="fa arrow"></span></a>
@@ -590,7 +590,7 @@
                                                 <ul class="list-unstyled media-block">
                                                     <li class="mar-btm">
                                                         <div class="media-left">
-                                                            <img src="images/avatar1.png" class="img-circle img-sm" alt="Profile Picture">
+                                                            <img src="/static/app/images/avatar1.png" class="img-circle img-sm" alt="Profile Picture">
                                                         </div>
                                                         <div class="media-body pad-hor">
                                                             <div class="speech">
@@ -604,7 +604,7 @@
                                                     </li>
                                                     <li class="mar-btm">
                                                         <div class="media-right">
-                                                            <img src="images/avatar2.png" class="img-circle img-sm" alt="Profile Picture">
+                                                            <img src="/static/app/images/avatar2.png" class="img-circle img-sm" alt="Profile Picture">
                                                         </div>
                                                         <div class="media-body pad-hor speech-right">
                                                             <div class="speech">
@@ -618,7 +618,7 @@
                                                     </li>
                                                     <li class="mar-btm">
                                                         <div class="media-left">
-                                                            <img src="images/avatar1.png" class="img-circle img-sm" alt="Profile Picture">
+                                                            <img src="/static/app/images/avatar1.png" class="img-circle img-sm" alt="Profile Picture">
                                                         </div>
                                                         <div class="media-body pad-hor">
                                                             <div class="speech">
@@ -632,7 +632,7 @@
                                                     </li>
                                                     <li class="mar-btm">
                                                         <div class="media-right">
-                                                            <img src="images/avatar2.png" class="img-circle img-sm" alt="Profile Picture">
+                                                            <img src="/static/app/images/avatar2.png" class="img-circle img-sm" alt="Profile Picture">
                                                         </div>
                                                         <div class="media-body pad-hor speech-right">
                                                             <div class="speech">
@@ -646,7 +646,7 @@
                                                     </li>
                                                     <li class="mar-btm">
                                                         <div class="media-right">
-                                                            <img src="images/avatar2.png" class="img-circle img-sm" alt="Profile Picture">
+                                                            <img src="/static/app/images/avatar2.png" class="img-circle img-sm" alt="Profile Picture">
                                                         </div>
                                                         <div class="media-body pad-hor speech-right">
                                                             <div class="speech">
@@ -660,7 +660,7 @@
                                                     </li>
                                                     <li class="mar-btm">
                                                         <div class="media-left">
-                                                            <img src="images/avatar1.png" class="img-circle img-sm" alt="Profile Picture">
+                                                            <img src="/static/app/images/avatar1.png" class="img-circle img-sm" alt="Profile Picture">
                                                         </div>
                                                         <div class="media-body pad-hor">
                                                             <div class="speech">
@@ -674,7 +674,7 @@
                                                     </li>
                                                     <li class="mar-btm">
                                                         <div class="media-right">
-                                                            <img src="images/avatar2.png" class="img-circle img-sm" alt="Profile Picture">
+                                                            <img src="/static/app/images/avatar2.png" class="img-circle img-sm" alt="Profile Picture">
                                                         </div>
                                                         <div class="media-body pad-hor speech-right">
                                                             <div class="speech">
@@ -688,7 +688,7 @@
                                                     </li>
                                                     <li class="mar-btm">
                                                         <div class="media-left">
-                                                            <img src="images/avatar1.png" class="img-circle img-sm" alt="Profile Picture">
+                                                            <img src="/static/app/images/avatar1.png" class="img-circle img-sm" alt="Profile Picture">
                                                         </div>
                                                         <div class="media-body pad-hor">
                                                             <div class="speech">
@@ -728,36 +728,36 @@
             </div>
         </section>
 
-        <script type="text/javascript" src="js/jquery.min.js"></script>
-        <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
-        <script src="js/metisMenu.min.js"></script>
-        <script src="js/jquery.nanoscroller.min.js"></script>
-        <script src="js/jquery-jvectormap-1.2.2.min.js"></script>
+        <script type="text/javascript" src="/static/app/js/jquery.min.js"></script>
+        <script type="text/javascript" src="/static/app/bootstrap/js/bootstrap.min.js"></script>
+        <script src="/static/app/js/metisMenu.min.js"></script>
+        <script src="/static/app/js/jquery.nanoscroller.min.js"></script>
+        <script src="/static/app/js/jquery-jvectormap-1.2.2.min.js"></script>
         <!-- Flot -->
-        <script src="js/flot/jquery.flot.js"></script>
-        <script src="js/flot/jquery.flot.tooltip.min.js"></script>
-        <script src="js/flot/jquery.flot.resize.js"></script>
-        <script src="js/flot/jquery.flot.pie.js"></script>
-        <script src="js/flot/curved-line-chart.js"></script>
-        <script src="js/chartjs/Chart.min.js"></script>
-        <script src="js/pace.min.js"></script>
-        <script src="js/waves.min.js"></script>
-        <script src="js/morris_chart/raphael-2.1.0.min.js"></script>
-        <script src="js/morris_chart/morris.js"></script>
-        <script src="js/jquery.sparkline.min.js"></script>
+        <script src="/static/app/js/flot/jquery.flot.js"></script>
+        <script src="/static/app/js/flot/jquery.flot.tooltip.min.js"></script>
+        <script src="/static/app/js/flot/jquery.flot.resize.js"></script>
+        <script src="/static/app/js/flot/jquery.flot.pie.js"></script>
+        <script src="/static/app/js/flot/curved-line-chart.js"></script>
+        <script src="/static/app/js/chartjs/Chart.min.js"></script>
+        <script src="/static/app/js/pace.min.js"></script>
+        <script src="/static/app/js/waves.min.js"></script>
+        <script src="/static/app/js/morris_chart/raphael-2.1.0.min.js"></script>
+        <script src="/static/app/js/morris_chart/morris.js"></script>
+        <script src="/static/app/js/jquery.sparkline.min.js"></script>
 
 
-        <script type="text/javascript" src="js/custom.js"></script>
+        <script type="text/javascript" src="/static/app/js/custom.js"></script>
         <!-- ChartJS-->
-        <script src="js/chartjs/Chart.min.js"></script>
+        <script src="/static/app/js/chartjs/Chart.min.js"></script>
 
         <!--page js-->
-        <script src="js/moment.min.js"></script>
+        <script src="/static/app/js/moment.min.js"></script>
 
-        <script src="js/jquery.simpleWeather.min.js"></script>
-        <script src="js/fullcalendar.min.js"></script>
+        <script src="/static/app/js/jquery.simpleWeather.min.js"></script>
+        <script src="/static/app/js/fullcalendar.min.js"></script>
 
-        <script src="js/index2.js"></script>
+        <script src="/static/app/js/index2.js"></script>
     </body>
 
 <!-- Mirrored from flicksbootstrap.com/demo/boost-admin/v1.3/boost-admin/index-2.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 20 Sep 2016 01:49:34 GMT -->
