prueba de login

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -162,6 +162,7 @@
                                 <li class="clearfix"><div class="col-sm-12">
                                         <input type="radio" name="layout" class="layout" value="wide" checked/> Wide
                                         <input type="radio" name="layout" class="layout" value="box"/> Boxed
+                                        <a href="/admin">Admin Site</a>
                                     </div>
                                 </li>
                                 <li class="notify-title">
