prueba de login

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -244,7 +244,7 @@
                                         <img alt="image" class="img-circle" src="/static/app/images/avtar-1.jpg" width="40">
                                     </span>
                                     <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                                        <span class="clear" style="display: block;"> <span class="block m-t-xs"> <strong class="font-bold">John Doe  <b class="caret"></b></strong>
+                                        <span class="clear" style="display: block;"> <span class="block m-t-xs"> <strong class="font-bold">{{user.username}} <b class="caret"></b></strong>
                                             </span></span> </a>
                                     <ul class="dropdown-menu animated fadeInRight m-t-xs">
                                         <li><a href="#"><i class="fa fa-user"></i>My Profile</a></li>
